# scorecard-cli

./: CHANGELOG.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  repo_scorecard.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  scorecard.yml
app_prueba/: __init__.py  calc.py  store.py
tests/integration/: test_flow.py
tests/unit/: test_calc.py  test_store.py
