[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scorecard-cli"
version = "0.1.0"
description = "CLI repo_scorecard + app de prueba para flujo CI completo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
observability = ["opentelemetry-api>=1.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app_prueba*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
markers = [
    "unit: tests unitarios",
    "integration: tests de integración",
]
